@@ -68,7 +68,8 @@ sub getCanonicalMacAddress {
     my @bytes;
 
     # packed value, convert from binary to hexadecimal
-    if ($value =~ m/\A [[:ascii:]] \Z/xms) {
+    if ($value =~ m/\A [[:ascii:]] \Z/xms || length($value) == 6) {
+print STDERR "\nUNPACK\n";
         $value = unpack 'H*', $value;
     }
 
